# Fastapi-book

./: README.md  pyproject.toml  requirements.txt
src/: body.py  deep.py  main.py  testing.py  todo.py
